--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <section id="contact">
           <div id="contact-content">
             <h3>Contact Me</h3>
-            <form action="https://formspree.io/zeklbike@gmail.com"
+            <form action="https://formspree.io/adiseminic@gmail.com"
   method="POST">
               <label
                 ><input
